--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -1,5 +1,10 @@
 .container {
   display: flex;
   justify-content: center;
-  width: 85%;
+  width: 55%;
+}
+@media (max-width: 720px) {
+  .container {
+    width: 100%;
+  }
 }
