--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,3 +7,16 @@ body {
   justify-content: center;
   flex-direction: column;
 }
+.image {
+  width: 370px;
+  margin: 10px 50px;
+}
+
+@media (max-width: 720px) {
+  .container {
+    margin: 0 10px;
+  }
+  .image {
+    width: 100%;
+  }
+}
