--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 50px 0;
+  margin: 50px;
 }
 .card {
   margin: 0 2% !important;
@@ -12,4 +12,9 @@
 }
 .recovered {
   border-bottom: 10px solid rgba(0, 255, 0, 0.5);
+}
+@media (max-width: 720px) {
+  .card {
+    margin: 2% 0 !important;
+  }
 }
