--- a/src/components/CountryPicker/CountryPicker.module.css
+++ b/src/components/CountryPicker/CountryPicker.module.css
@@ -1,4 +1,9 @@
 .formControl {
   width: 30%;
   margin-bottom: 30px !important;
+  align-content: center;
+  text-align: center;
+}
+.btnn {
+  margin: 1px 20px;
 }
